--- a/lab11/prj/ModulesVasylenko/ModulesVasylenko.cbp
+++ b/lab11/prj/ModulesVasylenko/ModulesVasylenko.cbp
@@ -16,6 +16,7 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
+					<Add directory="../../prj" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
